--- a/dictionary/index.html
+++ b/dictionary/index.html
@@ -4,31 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dictionary</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <nav>
-        <h1>
-            Dictionary App
-        </h1>
-        <div class="box">
-            <div class="secrshbar">
-                <input type="text" placeholder="Enter here " id="searchinput">
-                <button>search</button>
-            <div class="text">
-                <h2>Word : <span></span></h2>
-                    <p></p>
-                    <p>Word :<span></span></p>
-                    <p>Meaning :<span></span></p>
-                    <p>Example :<span></span></p>
-                    <p>Synonyms :<span></span></p>
-                    <a href="">Read more</a>
-                
-            </div>    
+    <div class="wrapper">
+        <header>Dictionary
+            <div class="search">
+                <input type="text" placeholder="Your word">
+                <i class="fas fa-search"></i>
+                <span class="material-icons">close</span>
+              <div>
+                <ul>
+                    <li class="word">
+                        <div class="details">
+                            <p>happy</p>
+                            <span> adjective /'hapi/</span>
+                        </div>
+                        <i class="fas fa-volume-up"></i>
+                    </li>
+                    <div class="content">
+                        <li class="meaning">
+                            <div class="details">
+                                <p>Meaning</p>
+                                <span>feeling or showing pleasure of contentment</span>
+                            </div>
+                        </li>
+                        <li class="example">
+                            <div class="details">
+                                <p>Example</p>
+                                <span>Jack came looking happy and excited.</span>
+                            </div>
+                        </li>
+                        <li class="synonyms">
+                            <div class="details">
+                                <p>synonyms</p>
+                                <div class="list">
+                                    <span>glad,</span>
+                                    <span>contented,</span>
+                                    <span>delighted,</span>
+                                    <span>cheerful,</span>
+                                    <span>joyful</span>
+                                </div>
+                            </div>
+                        </li>
+                    </div>
+                </ul>
+              </div>  
             </div>
-        </div>
-    </nav>
-    
+        </header>
+    </div>
+   <script src="dic.js"></script> 
 </body>
 </html>
