--- a/github/index.html
+++ b/github/index.html
@@ -8,5 +8,13 @@
     
 </head>
 <body>
+    <form action="#" class="user-form" id="form">
+        <input type="text" placeholder="Search username" id="search">
+    </form>
+
+    <main id="main"></main>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.2/axios.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
